Closed
Bug 241036
Opened 22 years ago
Closed 22 years ago
Minimo arm-linux build crashes on startup
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: darin.moz, Assigned: darin.moz)
References
()
Details
(Keywords: crash, fixed1.7)
Attachments
(1 file)
|
1.55 KB,
patch
|
caillon
:
review+
bryner
:
superreview+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
Minimo arm-linux build crashes on startup. I'm cc'ing folks who made checkins
that could have caused this. Here's the tinderbox bonsai query for the interval
in question:
http://tinderbox.mozilla.org/bonsai/cvsquery.cgi?module=MozillaTinderboxAll&date=explicit&mindate=1082388300&maxdate=1082391899
I'm most suspicious of GTK widget changes. I'll try to get a stack trace
sometime this evening.
| Assignee | ||
Updated•22 years ago
|
Severity: normal → critical
| Assignee | ||
Comment 1•22 years ago
|
||
Ok, gdbserver is not being helpful, but I've managed to narrow the cause of this
crash down to the changes made to nsScreenManagerGtk/nsScreenGtk by caillon. It
is crashing inside nsScreenGtk::Init(). MOZ_ENABLE_XINERAMA is not defined.
investigating further...
| Assignee | ||
Comment 2•22 years ago
|
||
More info: the call to gdk_error_trap_pop() is seg faulting. The funny thing
with that is that I don't see a corresponding gdk_error_trap_push. Should there
be one? The documentation for gdk_error_trap_pop() says:
Removes the X error trap installed with gdk_error_trap_push().
So, there should be a call to gdk_error_trap_push, right?
| Assignee | ||
Comment 3•22 years ago
|
||
This patch is based off the documentation available here:
http://developer.gnome.org/doc/API/2.0/gdk/gdk-General.html#gdk-error-trap-pop
I tested this patch, and it works fine in my debug linux-arm build.
| Assignee | ||
Comment 4•22 years ago
|
||
changing component back to browser since this bug is not in minimo specific code.
Component: General → GFX: Gtk
Product: Minimo → Browser
Target Milestone: --- → mozilla1.8alpha
Version: unspecified → Trunk
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•22 years ago
|
Attachment #146596 -
Flags: superreview?(bryner)
Attachment #146596 -
Flags: review?(caillon)
Updated•22 years ago
|
Attachment #146596 -
Flags: superreview?(bryner) → superreview+
Updated•22 years ago
|
Attachment #146596 -
Flags: review?(caillon) → review+
| Assignee | ||
Comment 5•22 years ago
|
||
thanks for the quick reviews guys!
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 6•22 years ago
|
||
do we need to fix this on the 1.7 branch?
Comment 7•22 years ago
|
||
Comment on attachment 146596 [details] [diff] [review]
v1 patch
looks like it...
Attachment #146596 -
Flags: approval1.7?
Comment 8•22 years ago
|
||
Comment on attachment 146596 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #146596 -
Flags: approval1.7? → approval1.7+
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•