fixes bug 241036 "need to call gdk_error_trap_push before calling gdk_error_trap_pop [was: Minimo arm-linux build crashes on startup]" r=caillon sr=bryner